--- a/HomeEnergyApi.Tests/HomeEnergyApi.Tests.csproj
+++ b/HomeEnergyApi.Tests/HomeEnergyApi.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.3" />
+    <PackageReference Include="Meziantou.Extensions.Logging.InMemory" Version="1.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
